--- a/index.html
+++ b/index.html
@@ -237,9 +237,9 @@ https://templatemo.com/tm-589-lugx-gaming
                 <div id="readmore">
                    <span class="readmore__content"><h10>
                   
-                    School Of  Commerce , The American  College gladly welcomes all the participates to the COMMAS’24 (One day state level inter collegiate cultural fest)  Which will be held on 23rd February 2024 .Galaxy of participates from different parts of  tamil nadu will be at the historic  American  College to experience the cultural  expertise of college students . It is indeed a red letter day in  the life of all the participants and the commerce student of the American  college. 
-                    As the president of commas `24,I welcome you all and see you  at the American college on 23rd February, 2024 to witness the grandiose event 
-                  
+                School Of  Commerce , The American  College gladly welcomes all the participates to the COMMAS’24 (One day state level inter collegiate cultural fest)  Which will be held on 23rd February 2024 .Galaxy of participates from different parts of  tamil nadu will be at the historic  American  College to experience the cultural  expertise of college students . It is indeed a red letter day in  the life of all the participates and the commerce student of the American  college. 
+As the president of commas `24,I welcome you all and see you  at the American college on 23rd February, 2024 to witness the grandiose event 
+
             </h10>
                     </span>
                    <center><button class="readmore__toggle" role="switch" aria-checked="true">
