--- a/index.html
+++ b/index.html
@@ -229,7 +229,7 @@ https://templatemo.com/tm-589-lugx-gaming
                   <div class="caption header-text">
          
               <body>
-                <a href=""><img src="josup sir.jpeg"width="300" height="450"></a>
+                <a href=""><img src="josup sir.jpeg"></a>
                <b><violet> <h5></h5></b></violet>
                <li><b style="color:#ff0ac6;font-size:20px;"> Dr.A.Hilary Joseph
                  </b></li>
