--- a/index.html
+++ b/index.html
@@ -267,10 +267,12 @@ https://templatemo.com/tm-589-lugx-gaming
                 <li2>JKANS HOTEL</li2>
                 <li2>CAMBER TECHNOLOGIES</li2>
                 <li2>TIME INSTITUTE</li2>
-                <li2>------------</li2>
+               
                 <center> <B><h10>LED Display</h10></B></center> 
-                <li2>------------</li2>
-                <li2>------------</li2>
+                <li2>Aqua Shifa</li2>
+                <li2>ABA</li2>
+                <li2>RMPT</li2>
+                <li2>S4 Detailing</li2>
                <!--- <li2>Mr.B.Karthik Raja</li2>
                 <li2>Mr.R.G.Vikraman  </li2>
                 <li2>Ms.S.Vihaasini</li2>
@@ -416,8 +418,8 @@ https://templatemo.com/tm-589-lugx-gaming
             <div class="item">
               <div class="thumb">
                 <center>   <center> <B><h10>Stalls</h10></B> </center> 
-                <li>Stall(1)=Ice,Briyani</li>
-                <li>Stall(2)=Ice,Briyani</li>
+                <li>Update soon</li>
+               <!-- <li>Stall(2)=Ice,Briyani</li>
                 <li>Stall(3)=Ice,Briyani</li>
                 <li>Stall(4)=Ice,Briyani</li>
                 <li>Stall(5)=Ice,Briyani</li>
@@ -435,7 +437,7 @@ https://templatemo.com/tm-589-lugx-gaming
                 <li>Stall(17)=Ice,Briyani</li>
                 <li>Stall(18)=Ice,Briyani</li>
                 <li>Stall(19)=Ice,Briyani</li>
-                <li>Stall(20)=Ice,Briyani</li> </center>
+                <li>Stall(20)=Ice,Briyani</li> </center>-->
               </div>
             </div>
           </div>
