--- a/index.html
+++ b/index.html
@@ -1074,7 +1074,7 @@ Final
   <div class="content_flightht_travel_dil">
   
    
-    <center><li><a style="font-size:20px">Time - 4:30PM </a></li>
+    <center><li><a style="font-size:20px">Time - 11.30AM</a></li>
     <li><a style="font-size:20px">Venue - Saunders hall (SH11) Preliminary </a></li>
     <!--<li><a style="font-size:20px">Venue - Amphie Theatre-Final </a></li>--->
     <li>  <b style="color:#ff0ac6;font-size:20px;">Faculty Incharge</b></li>
