--- a/index.html
+++ b/index.html
@@ -263,7 +263,7 @@ https://templatemo.com/tm-589-lugx-gaming
              <center><h10> Sponsors</h10></center> 
               <ol class="my-list2">
                 <li2>SVS</li2>
-                <li2>------------</li2>
+                <li2>Gurukshethra</li2>
                 <li2>JKANS HOTEL</li2>
                 <li2>CAMBER TECHNOLOGIES</li2>
                 <li2>TIME INSTITUTE</li2>
