--- a/index.html
+++ b/index.html
@@ -268,8 +268,8 @@ https://templatemo.com/tm-589-lugx-gaming
                 <li2>SVS</li2>
                 <li2>Gurukshethra</li2>
                 <li2>Jkans Hotal</li2>
-                <li2>CAMBER TECHNOLOGIES</li2>
-                <li2>TIME INSTITUTE</li2>
+                <li2> Camber Technologies</li2>
+                <li2>Time Institute</li2>
                
                 <center> <B><h10>LED Display</h10></B></center> 
                 <li2>Aqua Shifa</li2>
