--- a/promo.html
+++ b/promo.html
@@ -69,7 +69,7 @@ https://templatemo.com/tm-589-lugx-gaming
     </div>
   </header> 
   <!-- ***** Header Area End ***** -->
-
+<iframe width="560" height="315" src="https://www.youtube.com/embed/3bMagbU6PiA?si=30qN0_nFnGpROIlK" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
   
   <div class="main-banner">
  
