--- a/index.html
+++ b/index.html
@@ -424,7 +424,7 @@ https://templatemo.com/tm-589-lugx-gaming
                 <li>Stall(1)=Sona Motors</li>
 
                <li>Stall(2)=Triumph Motors</li>
-                <li>Stall(3)=Sri Murugan cYCLE</li>
+                <li>Stall(3)=Sri Murugan cycle</li>
                 <li>Stall(4)=Imprial Motors </li>
                 <li>Stall(5)=Airtel</li>
                 <li>Stall(6)=12'0 Clock Briyani</li>
