--- a/index.html
+++ b/index.html
@@ -1097,10 +1097,12 @@ Final
   <a class="close_flight_travelDl" href="##">&times;</a>
   <div class="content_flightht_travel_dil">
   
-   
-    <center><li><a style="font-size:20px">Time - 11.00AM</a></li>
-    <li><a style="font-size:20px">Venue - Saunders hall (SH11) Preliminary </a></li>
-    <!--<li><a style="font-size:20px">Venue - Amphie Theatre-Final </a></li>--->
+    <center><li>  <b style="color:#000000;font-size:20px;">Prelims</b></li></center>
+    <center><li><a style="font-size:20px">Time - 11.00 AM</a></li>
+    <li><a style="font-size:20px">Venue - Saunders hall (SH11)  </a></li>
+    <center><li>  <b style="color:#000000;font-size:20px;">Final</b></li></center>
+    <center><li><a style="font-size:20px">Time - 4.30 PM</a></li>
+ <li><a style="font-size:20px">Venue - Amphie Theatre </a></li>
     <li>  <b style="color:#ff0ac6;font-size:20px;">Faculty Incharge</b></li>
     
     <li><a style="font-size:20px">Dr.N.VIVEK - 9842550689</a></li>
@@ -1113,7 +1115,6 @@ Final
   </div>
   </div></center>  
 </div>
-
                <!--popup start-->
           
 <div id="popup_flight_travlDild" class="overlay_flight_traveldil">
