--- a/index.html
+++ b/index.html
@@ -596,7 +596,7 @@ https://templatemo.com/tm-589-lugx-gaming
     
                               </ol>
                             </div>
-                          </div> w
+                          </div> 
                          
 <div id="div2" style="visibility: hidden">
   <div class="row trending-box">
