--- a/index.html
+++ b/index.html
@@ -364,15 +364,15 @@ https://templatemo.com/tm-589-lugx-gaming
          
              <center><h10> Sponsors</h10></center> 
               <ol class="my-list2">
-                <li2>Gurukshethra</li2>
+                <li2>Guru kshethra</li2>
                 <li2>Karthikeyan</li2>
                 <li2>SVS</li2>
                
-                <li2>Jkans Hotel</li2>
+                <li2>Jkans Foods</li2>
                 <li2> Camber Technologies</li2>
                 <li2>Time Institute</li2>
                 <center><h10> Refreshment Partner</h10></center>
-                <li2>Ruby</li2>
+                <li2>Ruby Juice</li2>
                 <li2>Cup Time</li2>
                 <center> <B><h10>LED Display</h10></B></center> 
                 <li2>Aqua Shifa</li2>
@@ -527,7 +527,7 @@ https://templatemo.com/tm-589-lugx-gaming
                 <li>Stall(1)=Sona Motors</li>
 
                <li>Stall(2)=Triumph Motors</li>
-                <li>Stall(3)=Sri Murugan cYCLE</li>
+                <li>Stall(3)=Sri Murugan cycle</li>
                 <li>Stall(4)=Imprial Motors </li>
                 <li>Stall(5)=Airtel</li>
                 <li>Stall(6)=12'0 Clock Briyani</li>
@@ -544,20 +544,20 @@ https://templatemo.com/tm-589-lugx-gaming
                 <li>Stall(17)=D Foods</li>
                 <li>Stall(18)=SVS</li>
                 <li>Stall(19)=ATHO</li>
-                <li>Stall(20)=AIMS gym</li>
-                <li>Stall(21)=NO regerts </li> </center>
+                <li>Stall(20)=Rose</li>
+                <li>Stall(21)=AIMS gym </li> </center>
                 <li>Stall(22)=CPA  Foods</li>
-                <li>Stall(23)=Appolo Computers</li>
+                <li>Stall(23)=Apollo Computers</li>
                 <li>Stall(24)=Ambigo Scoopers </li>
                 <li>Stall(25)=EESH Makeover</li>
                 <li>Stall(26)=Jkhans Hotel</li>
                 <li>Stall(27)=Aribiyan Nights</li>
-                <li>Stall(28)=</li>
-                <li>Stall(29)=SN Foodies </li>
+                <li>Stall(28)=Sungidi Sarees</li>
+                <li>Stall(29)=JN Foodies </li>
                 <li>Stall(30)=Fancy store</li>
-                <li>Stall(31)=Juice shop </li> </center>
+                <li>Stall(31)=Pani Puri</li> </center>
                 <li>Stall(32)=Evelin Home food </li>
-                <li>Stall(33)=</li>
+                <li>Stall(33)=Hermon Foods</li>
                 <li>Stall(34)=Camber Technologies </li>
                 <li>Stall(35)=Yoyo Shawarama</li>
                 <li>Stall(36)=Sri ram store </li>
