--- a/index.html
+++ b/index.html
@@ -245,7 +245,7 @@ https://templatemo.com/tm-589-lugx-gaming
               </div>
             </div>
             <div class="row trending-box">
-            <div class="col-lg-3 col-md-6 align-self-center mb-30 trending-items col-md-6 ag">
+            <div class="col-lg-3 col-md-6 align-self-center mb-30 trending-items col-md-6 aboutus>
               <div class="item">
                 <div class="thumb">
                   
