--- a/index.html
+++ b/index.html
@@ -1165,7 +1165,7 @@ https://templatemo.com/tm-589-lugx-gaming
                                       <li>  <b style="color:#ff0ac6;font-size:20px;">Student Incharge</b></li>
                               
                                         <li> <a style="font-size:20px">S.Vihaasini - 6381475297</a></li>
-                                    
+                                    <center> <iframe src="https://www.google.com/maps/embed?pb=!1m14!1m8!1m3!1d358.3774175304603!2d78.13262081050017!3d9.928890580270414!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x3b00c54b1aed0ae3%3A0x6c011a156f5ec700!2sFood%20Science%20Laboratory!5e0!3m2!1sen!2sin!4v1708669065581!5m2!1sen!2sin" width="300" height="300" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe></center>
                                        </center>
                                     </div>
                                   </div>
