--- a/index.html
+++ b/index.html
@@ -1290,7 +1290,7 @@ https://templatemo.com/tm-589-lugx-gaming
                                <span> Lot Number</span> <b>"41,56,57,60,75,77"</b>
                                 <span>selected for Finals</span>
                                 <li><a style="font-size:20px">Time - 3:30 P.M </a></li>
-                                <li><a style="font-size:20px">Venue -  Auditorium </a></li>
+                                <li><a style="font-size:20px">Venue - Saunders hall (SH11)</a></li>
                                
                                
                               </div>
